fix issue where horizontal scroll bar was too far below tables

--- a/lightserv/static/main.css
+++ b/lightserv/static/main.css
@@ -209,6 +209,8 @@ li.widespace {
             margin: 10px 0;
         } 
 
+.tableFixHeadShort     { overflow-y: auto }
+
 .tableFixHead          { overflow-y: auto; height: 450px; }
 .tableFixHead thead th { position: sticky; top: 0; }
 
